Setup director, initial mapping of API
