# pkg/http/router/handlers/devices/middleware.go
@@ -1,0 +1,33 @@
+package devices
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/go-chi/chi/v5"
+	"github.com/smarthomeix/pkg/http/response"
+)
+
+type contextKey string
+
+const ContextKey contextKey = "device"
+
+func (h *Handler) Middleware(next http.Handler) http.Handler {
+
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		deviceID := chi.URLParam(r, "deviceId")
+
+		ctx := r.Context()
+
+		record, exists := h.director.GetDevice(deviceID)
+
+		if !exists {
+			response.HandleNotFound(w)
+			return
+		}
+
+		ctxWithDevice := context.WithValue(ctx, ContextKey, record)
+
+		next.ServeHTTP(w, r.WithContext(ctxWithDevice))
+	})
+}
