# pkg/http/router/handlers/devices/request.go
@@ -1,0 +1,7 @@
+package devices
+
+type CreateRequest struct {
+	ID            string         `json:"id"`
+	IntegrationID string         `json:"integrationId"`
+	Config        map[string]any `json:"config"`
+}
